# canvas-cli

./: Cargo.toml  README.md  canvas.db
src/: cli.rs  client.rs  db.rs  lib.rs  main.rs  models.rs
tests/: access_tests.rs  db_tests.rs  test_cli.rs  test_client.rs  test_models.rs
tests/mocks/: mod.rs  responses.rs
