[package]
name = "canvas-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
temp-env = "0.3"